<resources>
    <string name="app_name">点菜宝</string>
    <string name="hello">Hello World, Login!</string>
    <string name="user_name">用户账户：</string>
    <string name="user_pass">用户口令：</string>
    <string name="add">点菜</string>
    <string name="plan">进度</string>
    <string name="cancel">取消</string>
    <string name="progress">传菜进度</string>
    <string name="welcome_use">欢迎使用</string>
    <string name="hint1">登录账号，详情咨询管理员</string>
    <string name="hint2">请输入123</string>
    <string name="money">财神到</string>
    <string name="me">我的</string>
    <string name="name">姓名：</string>
    <string name="NumberSigned">月累计签到次数：</string>
    <string name="TimeUsed">今日APP运行时长：</string>
    <string name="start">开始</string>
    <string name="please_speak">请说话</string>
    <string name="speaking">说话中</string>
    <string name="setting">设置</string>
    <string name="goto_cart">去下单</string>
    <string name="keyword">请输入关键字</string>
    <string name="bug">测试按钮（请勿点击，有BUG）</string>
    <string name="sumSize">总数：</string>
    <string name="sumPrice">总价：</string>
    <string name="add_new_order">添加新订单</string>
    <string name="table_id">桌号：</string>
    <string name="wait_time">等待时间：</string>
    <string name="serving_progress">上菜进度：</string>
    <string name="reminder_number">催单次数：</string>
    <string name="details">详情</string>
    <string name="reminder">催单</string>
    <string name="menu">菜单</string>
    <string name="finished">结算</string>
    <string name="change">修改</string>
    <string name="reserve_number">订菜数量</string>
    <string name="reduce_serve_number">减少订菜数量</string>
    <string name="add_reserve_number">增加订菜数量</string>
    <string name="history_indent">历史订单</string>
</resources>
