<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<LinearLayout
		android:orientation="horizontal"
		android:gravity="center"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		>
		<TextView
				android:text="@string/me"
				android:textSize="26sp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center">
		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/user_name"
			android:textSize="16sp"
			android:layout_weight="1.0"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/user_name"
			android:textSize="16sp"
			android:layout_weight="1.0"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/name"
			android:textSize="16sp"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/realName"
			android:textSize="16sp"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/NumberSigned"
			android:textSize="16sp"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/nmber_check"
			android:textSize="16sp"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/TimeUsed"
			android:textSize="16sp"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/timeused"
			android:textSize="16sp"/>
	</LinearLayout>
</LinearLayout>
