<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/item_underway_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/table_id_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="start"
                    android:textColor="#336598"
                    android:text="@string/table_id"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#336598"
                    android:id="@+id/table_id"
                    android:textSize="16sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#336598"
                    android:text="@string/serving_progress"
                    android:id="@+id/serving_progress_text"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#336598"
                    android:id="@+id/serving_progress"
                    android:textSize="16sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#336598"
                    android:textSize="16sp"
                    android:text="@string/wait_time"/>
                <com.hanks.htextview.HTextView
                    android:id="@+id/wait_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#fe864b"
                    android:textSize="16sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#336598"
                    android:textSize="16sp"
                    android:text="@string/reminder_number"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#336598"
                    android:textSize="16sp"
                    android:id="@+id/reminder_number"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_toLeftOf="@+id/underway_details"
            android:layout_centerVertical="true"
            android:layout_width="65sp"
            android:layout_height="65sp"
            android:background="@color/colorTabBlue"
            android:id="@+id/reminder"
            android:text="@string/reminder"
            android:textSize="18sp"
            android:textColor="@color/base_white"
            />
        <Button
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="65sp"
            android:layout_height="65sp"
            android:background="@color/orange_bg"
            android:id="@+id/underway_details"
            android:text="@string/details"
            android:textSize="18sp"
            android:textColor="@color/base_white"/>
    </RelativeLayout>
</LinearLayout>