<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/item_history_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="85sp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/table_id_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="start"
                    android:textColor="#336598"
                    android:text="@string/table_id"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#336598"
                    android:id="@+id/table_id"
                    android:textSize="16sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#336598"
                    android:text="@string/reserve_number"
                    android:id="@+id/reserve_number_text"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#336598"
                    android:id="@+id/history_reserve_number"
                    android:textSize="16sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#336598"
                    android:textSize="16sp"
                    android:text="@string/sumPrice"/>
                <TextView
                    android:id="@+id/history_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#fe864b"
                    android:textSize="16sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#336598"
                    android:textSize="16sp"
                    android:text="@string/reminder_number"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#336598"
                    android:textSize="16sp"
                    android:id="@+id/reminder_number"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="65sp"
            android:layout_height="60sp"
            android:background="@color/best_head_bg"
            android:id="@+id/history_details"
            android:text="@string/details"
            android:textSize="18sp"
            android:layout_alignParentBottom="true"
            android:textColor="@color/base_white"/>
    </RelativeLayout>
</LinearLayout>