<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<Space
		android:layout_width="match_parent"
		android:layout_height="20dp" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="60dp"
		android:orientation="horizontal"
		android:gravity="start"
		android:background="@color/white">
		<ImageView
			android:layout_marginLeft="20dp"
			android:layout_marginTop="8dp"
			android:layout_marginRight="10dp"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:src="@mipmap/ic_account"/>
		<TextView
			android:layout_marginLeft="20dp"
			android:layout_marginTop="25dp"
			android:layout_marginRight="5dp"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:text="@string/user_name"
			android:textSize="18sp"
			android:textColor="@color/orange_bg"/>
		<TextView
			android:layout_marginTop="25dp"
			android:layout_marginRight="5dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/user_name"
			android:text="测试"
			android:textSize="18sp"
			android:textColor="@color/orange_bg"/>
	</LinearLayout>
	<Space
		android:layout_width="match_parent"
		android:layout_height="20dp" />
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="60dp"
		android:orientation="horizontal"
		android:gravity="start"
		android:background="@color/white">
		<ImageView
			android:layout_marginLeft="20dp"
			android:layout_marginTop="8dp"
			android:layout_marginRight="10dp"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:src="@mipmap/ic_emo_yellow"/>
		<TextView
			android:layout_marginLeft="20dp"
			android:layout_marginTop="25dp"
			android:layout_marginRight="5dp"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:text="@string/name"
			android:textSize="18sp"
			android:textColor="@color/orange_bg"/>
		<TextView
			android:layout_marginTop="25dp"
			android:layout_marginRight="5dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/realName"
			android:text="测试"
			android:textSize="18sp"
			android:textColor="@color/orange_bg"/>
	</LinearLayout>
	<Space
		android:layout_width="match_parent"
		android:layout_height="20dp" />
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="60dp"
		android:orientation="horizontal"
		android:gravity="start"
		android:background="@color/white">
		<ImageView
			android:layout_marginLeft="20dp"
			android:layout_marginTop="8dp"
			android:layout_marginRight="10dp"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:src="@mipmap/star"/>
		<TextView
			android:layout_marginLeft="20dp"
			android:layout_marginTop="25dp"
			android:layout_marginRight="5dp"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:text="@string/NumberSigned"
			android:textSize="18sp"
			android:textColor="@color/orange_bg"/>
		<TextView
			android:layout_marginTop="25dp"
			android:layout_marginRight="5dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/check_number"
			android:text="测试"
			android:textSize="18sp"
			android:textColor="@color/orange_bg"/>
	</LinearLayout>
	<Space
		android:layout_width="match_parent"
		android:layout_height="20dp" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="60dp"
		android:background="@color/white"
		android:gravity="start"
		android:orientation="horizontal">

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_marginLeft="18dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="8dp"
			android:src="@mipmap/ic_run" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_marginLeft="18dp"
			android:layout_marginTop="25dp"
			android:text="@string/TimeUsed"
			android:textColor="@color/orange_bg"
			android:textSize="18sp" />

		<com.hanks.htextview.HTextView
			android:id="@+id/timeused"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="25dp"
			android:background="#ffffff"
			android:gravity="center"
			android:textColor="#fe864b"
			android:textSize="17sp" />
	</LinearLayout>
</LinearLayout>
